# oeom-sgj-2025

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
src/: ecs.hpp  globals.hpp  main.cpp  texture.hpp  timer.hpp
